--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "redux": "^3.7.2",
     "styled-jsx": "^1.0.10"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "babel-preset-react": "^6.24.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "redux-devtools": "^3.4.0",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.1"
   }
