--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "styled-jsx": "^1.0.10"
+    "styled-jsx": "^1.0.10",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
