--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "webpack-dev-server --open"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
