--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "styled-jsx": "^1.0.10",
     "uuid": "^3.1.0"
