--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "build-prod": "webpack -p",
     "dev": "webpack-dev-server --open"
   },
   "dependencies": {
