--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "webpack",
     "build-prod": "webpack -p",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "test": "jest"
   },
   "dependencies": {
     "lodash": "^4.17.4",
@@ -23,15 +24,21 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-require": "^3.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.9.1",
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.1.0",
+    "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
+    "redux-mock-store": "^1.3.0",
     "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.8.1"
